syntax = "proto3";

package service;

service ServiceManager {
  rpc Start (StartRequest) returns (StartResponse);
  rpc Stop (StopRequest) returns (StopResponse);
  rpc State (StateRequest) returns (StateResponse);
}

message StartRequest {}
message StartResponse {
  string message = 1;
}

message StopRequest {}
message StopResponse {
  string message = 1;
}

message StateRequest {}
message StateResponse {
  string message = 1;
}